# robot_dreams_rust

./: .gitignore  Cargo.toml  Makefile  README.md
lesson_01/: Cargo.toml  Makefile  README.md
lesson_01/src/: main.rs
lesson_02/: Cargo.toml  README.md
lesson_02/src/: main.rs
lesson_05/: Cargo.toml  Makefile  README.md
lesson_05/resources/test/: addresses.csv
lesson_05/src/: command_csv.rs  command_csv_tests.rs  commands.rs  main.rs
lesson_07/: Cargo.toml  README.md
lesson_07/src/: command_csv.rs  command_csv_tests.rs  commands.rs  main.rs
lesson_09/: Cargo.toml  README.md
lesson_09/src/client/: main.rs
lesson_09/src/server/: main.rs
lesson_11/: Cargo.toml  README.md
lesson_11/chat-client/: Cargo.toml
lesson_11/chat-client/src/: main.rs
lesson_11/chat-lib/: Cargo.toml
lesson_11/chat-lib/src/: lib.rs
lesson_11/chat-lib/tests/: serialization_image.rs  serialization_text.rs
lesson_11/chat-server/: Cargo.toml
lesson_11/chat-server/src/: main.rs
lesson_11/resources/: calendar.ics
lesson_11/src/client/: main.rs
lesson_11/src/lib/: lib.rs
lesson_13/: README.md
lesson_13/chat-client/: Cargo.toml
lesson_13/chat-client/src/: main.rs
lesson_13/chat-lib/: Cargo.toml
lesson_13/chat-lib/src/: lib.rs
lesson_13/chat-lib/tests/: message_errors.rs  serialization_file.rs
lesson_13/chat-server/: Cargo.toml
lesson_13/chat-server/src/: main.rs
lesson_13/src/server/: main.rs
