[package]
name = "lesson_09"
version = "0.1.0"
edition = "2021"

[lib]
name = "lesson_09"
path = "src/lib/lib.rs"

[[bin]]
name = "lesson_09_client"
path = "src/client/main.rs"

[[bin]]
name = "lesson_09_server"
path = "src/server/main.rs"

[dependencies]
bincode = "1.3.3"
envy = "0.4.2"
fastrand = "2.0.1"
image = "0.24.7"
once_cell = "1.18.0"
serde = {  version = "1.0.190", features = ["derive"] }
